--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "classmap": ["tests"]
   },
   "repositories": [
-    {"type": "composer", "url": "https://repo.packagist.com/try-chenhai/"},
-    {"packagist.org": false}
+    {"type": "composer", "url": "https://packagist.org/packages/chenhaitry/laravel-command"},
+    {"packagist.org": true}
   ]
 }
