--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,9 @@
       "email": "chenhaitry64@gmail.com"
     }
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
-    "php": "^7.3 | ^8.0",
-    "illuminate/support": "^5.7.19",
-    "illuminate/console": "^5.7.19"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "php": "^7.3 | ^8.0"
   },
   "support": {
     "issues": "https://github.com/chenhaitry/laravel-command/issues",
@@ -32,7 +27,7 @@
     "classmap": ["tests"]
   },
   "repositories": [
-    {"type": "composer", "url": "https://packagist.org/packages/chenhaitry/laravel-command"},
-    {"packagist.org": true}
+    {"type": "github", "url": "https://github.com/chenhaitry/laravel-command"},
+    {"packagist.org": false}
   ]
 }
