--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Chnehaitry\\LaravelCommand\\LaravelCommandServiceProvider"
+        "Chenhaitry\\LaravelCommand\\LaravelCommandServiceProvider"
       ]
     }
   }
