--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.3 | ^8.0"
+    "php": "^7.3 | ^8.0",
+    "illuminate/support": ">=5.1",
+    "illuminate/console": ">=5.1"
   },
   "support": {
     "issues": "https://github.com/chenhaitry/laravel-command/issues",
