--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^7.3 | ^8.0",
+    "php": "^7.3 | ^8.0"
   },
   "support": {
     "issues": "https://github.com/chenhaitry/laravel-command/issues",
