--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,15 @@
       "email": "chenhaitry64@gmail.com"
     }
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
-    "php": "^7.3 | ^8.0"
+    "php": "^7.1 || ^8.0",
+    "laravel/framework": "^5.4 || ^6.0 || ^7.0 || ^8.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.5 || ^7.0 || ^8.0",
+    "graham-campbell/testbench": "^4.0 || ^5.0",
+    "mockery/mockery": "^1.4"
   },
   "support": {
     "issues": "https://github.com/chenhaitry/laravel-command/issues",
@@ -33,7 +39,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Chenhaitry\\LaravelCommand\\LaravelCommandServiceProvider"
+        "Chenhaitry\\LaravelCommand\\Provider\\LaravelCommandServiceProvider"
       ]
     }
   }
